# JEPA-LeRobot

./: .gitignore  project.md  requirements.txt
lerobot_policy_lewm/: COMMANDS.md  README.md  pyproject.toml
lerobot_policy_lewm/src/lerobot_policy_lewm/: __init__.py  compare_policies.py  compare_report.py  configuration_lewm.py  debug_dashboard.py  eval_offline.py  lewm_core.py  modeling_lewm.py  processor_lewm.py
lerobot_policy_lewm/tests/: test_compare_report.py  test_config_lewm.py  test_debug_dashboard.py  test_eval_offline_metrics.py  test_modeling_lewm.py
lewm_dataset_utils/: __init__.py  data_validation.py
scripts/: README.md  convert_lerobot_to_hdf5.py  download_lerobot_datasets.py  inspect_validate_hdf5.py  visualize_hdf5_rerun.py
tests/: test_convert_pipeline.py  test_data_validation.py  test_visualize_hdf5_rerun.py
