[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_policy_lewm"
version = "0.1.0"
description = "LeRobot plugin policy for LeWorldModel (LeWM) BC scaffold"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "lerobot",
  "torch",
  "einops",
  "transformers",
  "gradio",
  "pandas",
  "plotly",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
